# deepone

./: cuda debug.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
camie_distill/: consistency.py  dataset_builder.py  flash_stub.py  focal_loss.py  preprocessing.py  requirements.txt  student_model.py  train_student.py
camie_distill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
camie_distill/orchestrator/: config.yaml  launch.sh  scheduler.py
camie_distill/transformers/: __init__.py  preprocess.py
