[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "camie_distill"
version         = "0.1.0"
description     = "Student-teacher distillation toolkit for Camie-Tagger"
readme          = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch>=2.1",
  "timm==0.9.12",
  "safetensors>=0.5.3",
  deepspeed==0.14.1
  huggingface_hub>=0.23
]

# Values you’ll let Setuptools fill in from setup.cfg or other metadata
dynamic = ["classifiers", "keywords", "license", "authors", "scripts"]