[metadata]
name = camie_distill
version = 0.1.0
author = Your Name
author_email = you@example.com
url = https://github.com/yourname/camie_distill
description = "Student-teacher distillation toolkit for Camie-Tagger"
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = deep-learning, vision, multilabel, distillation, huggingface

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

install_requires =
    torch>=2.1
    safetensors
    timm==0.9.12
    deepspeed==0.14.1
    huggingface_hub>=0.23
    pillow
    numpy
    tqdm
    pandas

[options.packages.find]
where = .
exclude =
    tests*
    docs*
    examples*

[options.entry_points]
console_scripts =
    camie-build-dataset = camie_distill.dataset_builder:build_dataset
    camie-train-student = camie_distill.train_student:main
